--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -14,7 +14,7 @@ set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 12
+font pango:PragmataPro Mono Liga 14
 
 
 for_window [window_role="pop-up"] floating enable
@@ -218,7 +218,7 @@ bindsym $mod+Escape mode "$mode_system"
 bar {
   status_command i3status-rs
   position top
-  font pango: Monospace 12
+  font pango: PragmataPro Mono Liga 14
   colors {
     background #282A36
     statusline #F8F8F2
