Fixes for i3 and alacritty
[i3] changed terminal from st-user to alacritty
[alacritty] removed decorations and changed dracula theme path

--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -27,7 +27,7 @@ for_window [class="(?i)lxappearance"] floating enable
 exec --no-startup-id dex-autostart --autostart --environment i3
 
 # run policykit agent
-exec --no-startup-id /usr/libexec/polkit-gnome-authentication-agent-1 &
+exec --no-startup-id lxpolkit &
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
@@ -57,7 +57,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st-user
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
