--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,7 +1,8 @@
 unbind C-b
 set -g prefix `
 bind ` send-prefix
-bind r source-file ~/.tmux.conf; display-message "Reloaded config"
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key M split-window -h "chezmoi edit --apply ~/.tmux.conf"
 bind | split-window -h
 bind - split-window -v
 bind-key C-a last-window
@@ -21,7 +22,7 @@ set -g mouse on
 setw -g monitor-activity on
 set -g visual-activity on
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",st-256color:Tc"
+set -ga terminal-overrides ",alacritty:Tc"
 set -g set-titles on
 set -g set-titles-string "#T"
 set-option -g status on
