[i3] fix eddie rule

--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -19,7 +19,7 @@ font pango:PragmataPro Mono Liga 14
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
-for_window [title="Eddie"] floating enable
+for_window [class="Eddie"] floating enable
 for_window [class="(?i)lxappearance"] floating enable
 
 # Start XDG autostart .desktop files using dex. See also
