--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -31,7 +31,7 @@ glx-copy-from-front = false;
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
 # May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
+glx-use-copysubbuffermesa = true;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
@@ -206,6 +206,7 @@ blur-kern = "9x9gaussian"
 blur-background-exclude = [
     "class_g = 'Peek'",
 	"class_g = 'Pensela'",
+	"class_g = 'slop'",
 	"name = 'Drawing Board'",
     "window_type = 'dock'",
 	"window_type = 'dropdown_menu'",
@@ -250,13 +251,12 @@ log-level = "warn";
 
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
+use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
 
 
-#vsync = true;
+vsync = true;
 
 
 # sw-opti = true;
@@ -287,9 +287,8 @@ wintypes:
 	dnd = { shadow = false; }
 	popup_menu = { opacity = 1; }
 	dropdown_menu = { opacity = 1; }
-	
 	# This avoid problems with transparent windows while use-damage = true;.
-	# normal = { full-shadow = true;}; 
+	# normal = { full-shadow = true;};
 
 #   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
 
