[i3] put tray on displayport-0
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -226,6 +226,7 @@ bar {
   status_command i3status-rs
   position top
   font pango: PragmataPro Mono Liga 14
+  tray_output DisplayPort-0
   colors {
     background #282A36
     statusline #F8F8F2
