--- a/private_dot_gnupg/scdaemon.conf
+++ b/private_dot_gnupg/scdaemon.conf
@@ -1,5 +1,5 @@
 disable-ccid
 pcsc-driver /usr/lib64/libpcsclite.so.1
 card-timeout 1
-reader-port Yubico YubiKey
+reader-port "Yubico YubiKey OTP+FIDO+CCID 00 00"
 pcsc-shared
