--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -16,6 +16,20 @@ set $alt Mod1
 # is used in the bar {} block below.
 font pango:PragmataPro Mono Liga 14
 
+# Only enable gaps on a workspace when there is at least one container
+smart_gaps on
+
+# Only enable outer gaps when there is exactly one container
+smart_gaps inverse_outer
+
+# Activate smart borders (always)
+smart_borders on
+
+# Activate smart borders (only when there are effectively no gaps)
+smart_borders no_gaps
+
+# Hide edge borders only if there is one window with no gaps
+hide_edge_borders smart_no_gaps
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
