[tmux] added tpm and tmux plugins
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -38,3 +38,20 @@ set-option -g status-left ""
 set-option -g status-right-length 80
 set-option -g status-right " #S #{?client_prefix,#[fg=colour2]^A,} \
 #[bg=colour8]#[fg=colour10] %d.%m.%Y %H:%M "
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_flavour 'latte'
+set -g @catppuccin_window_tabs_enabled on
+set -g @catppuccin_user "on"
+set -g @catppuccin_host "on"
+set -g @catppuccin_pill_theme_enabled on
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
