[kitty] changed settings, added catppuccin theme
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -475,7 +475,7 @@ show_hyperlink_targets yes
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 
-# focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around.
@@ -1518,7 +1518,6 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
 #: }}}
 
 #: OS specific tweaks {{{
-
 wayland_titlebar_color background
 
 #: The color of the kitty window's titlebar on Wayland systems with
@@ -1623,7 +1622,7 @@ wayland_titlebar_color background
 #: configuration will change this value only for newly created OS
 #: windows.
 
-linux_display_server Wayland
+linux_display_server wayland
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
@@ -1701,7 +1700,7 @@ linux_display_server Wayland
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -2392,4 +2391,8 @@ linux_display_server Wayland
 
 #: }}}
 
-include catppuccin_latte.conf
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Latte
+include current-theme.conf
+# END_KITTY_THEME
