--- a/dot_config/kitty/current-theme.conf
+++ b/dot_config/kitty/current-theme.conf
@@ -1,3 +1,13 @@
+# vim:ft=kitty
+
+## name:     Catppuccin-Latte
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/latte.conf
+## blurb:    Soothing pastel theme for the high-spirited!
+
+
+
 # The basic colors
 foreground              #4C4F69
 background              #EFF1F5
