[tmux] tweaked 24bit colors setting
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -3,6 +3,8 @@ set -g prefix `
 bind ` send-prefix
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key M split-window -h "chezmoi edit --apply ~/.tmux.conf"
+set -as terminal-features ",*:RGB"
+set -as terminal-overrides ",*:Tc"
 bind | split-window -h
 bind - split-window -v
 bind-key C-a last-window
@@ -22,7 +24,6 @@ set -g mouse on
 setw -g monitor-activity on
 set -g visual-activity on
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
 set -g set-titles on
 set -g set-titles-string "#T"
 set-option -g status on
