[tmux] added automatic installation of tpm
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -54,5 +54,9 @@ set -g @catppuccin_user "on"
 set -g @catppuccin_host "on"
 set -g @catppuccin_pill_theme_enabled on
 
+# Install tpm if it's not available
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
