[starship] revert to `Catppuccin-latte` theme. Thanks astigmatism!
Signed-off-by: Roberto Alfieri <me@rebtoor.com>

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,6 +1,6 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 add_newline = false
-palette = "catppuccin_mocha"
+palette = "catppuccin_latte"
 
 [aws]
 format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
